Management of ? tiles for gogui-rules_board